test/fail/inheritance/inherit_variant.lly
#[
SyntaxError: 'Two' cannot be inherited from.
    from inherit_variant.lly:11
]#

enum Test {
    One
    Two
}

class example < Two { }
